# qr_code

./: Cargo.toml  qr_code_system_design.md
reuqest/: qr_code.http
src/: api.rs  domain.rs  error.rs  main.rs  repository.rs  service.rs
