[package]
name = "qr_code_genrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
thiserror = "2"
url = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
async-trait = "0.1"